fix transfer event related types in swagger
