# docs/swagger.yml
@@ -1936,6 +1936,7 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/TransferEvent'
+                    required: true
                   next_blocking_transfer:
                     description: Details about the next transfer in the sequence that is preventing further progress, if any.
                     nullable: true
@@ -2418,26 +2419,27 @@ components:
       type: object
     AxelarTransferInfo:
       properties:
-        axelar_transfer:
-          properties:
-            axelar_scan_link:
-              description: Link to the transaction on the Axelar Scan explorer
-              type: string
-            to_chain_id:
-              description: Chain ID of the destination chain
-              type: string
-            from_chain_id:
-              description: Chain ID of the source chain
-              type: string
-            state:
-              $ref: '#/components/schemas/AxelarTransferState'
-            txs:
-              oneOf:
-                - $ref: '#/components/schemas/ContractCallWithTokenTxs'
-                - $ref: '#/components/schemas/SendTokenTxs'
-            type:
-              $ref: '#/components/schemas/AxelarTransferType'
-          type: object
+        axelar_scan_link:
+          description: Link to the transaction on the Axelar Scan explorer
+          type: string
+        to_chain_id:
+          description: Chain ID of the destination chain
+          type: string
+          required: true
+        from_chain_id:
+          description: Chain ID of the source chain
+          type: string
+          required: true
+        state:
+          $ref: '#/components/schemas/AxelarTransferState'
+          required: true
+        txs:
+          oneOf:
+            - $ref: '#/components/schemas/ContractCallWithTokenTxs'
+            - $ref: '#/components/schemas/SendTokenTxs'
+          required: true
+        type:
+          $ref: '#/components/schemas/AxelarTransferType'
       type: object
     AxelarTransferState:
       description: |
@@ -2518,19 +2520,16 @@ components:
       type: object
     CCTPTransferInfo:
       properties:
-        cctp_transfer:
-          properties:
-            to_chain_id:
-              description: Chain ID of the destination chain
-              type: string
-            from_chain_id:
-              description: Chain ID of the source chain
-              type: string
-            state:
-              $ref: '#/components/schemas/CCTPTransferState'
-            txs:
-              $ref: '#/components/schemas/CCTPTransferTxs'
-          type: object
+        to_chain_id:
+          description: Chain ID of the destination chain
+          type: string
+        from_chain_id:
+          description: Chain ID of the source chain
+          type: string
+        state:
+          $ref: '#/components/schemas/CCTPTransferState'
+        txs:
+          $ref: '#/components/schemas/CCTPTransferTxs'
       type: object
     CCTPTransferTxs:
       properties:
@@ -2562,6 +2561,40 @@ components:
       properties:
         cctp_transfer:
           $ref: '#/components/schemas/CCTPTransfer'
+      type: object
+    StargateTransfer:
+      description: A transfer facilitated by the Stargate bridge
+      properties:
+        from_chain_id:
+          description: Canonical chain-id of the source chain of the bridge transaction
+          type: string
+        to_chain_id:
+          description: Canonical chain-id of the destination chain of the bridge transaction
+          type: string
+        denom_in:
+          description: Denom of the input asset
+          type: string
+        denom_out:
+          description: Denom of the output asset
+          type: string
+        bridge_id:
+          $ref: '#/components/schemas/BridgeType'
+        pool_address:
+          type: string;
+        destination_endpoint_id:
+          type: number;
+        oft_fee_asset:
+          $ref: '#/components/schemas/Asset'
+        oft_fee_amount:
+          type: string
+        oft_fee_amount_usd:
+          type: string
+        messaging_fee_asset:
+          $ref: '#/components/schemas/Asset'
+        messaging_fee_amount:
+          type: string
+        messageing_fee_amount_usd:
+          type: string
       type: object
     StargateTransferState:
       description: |
@@ -2597,43 +2630,59 @@ components:
       type: object
     StargateTransferInfo:
       properties:
-        stargate_transfer:
-          properties:
-            from_chain_id:
-              description: Chain ID of the source chain
-              type: string
-            to_chain_id:
-              description: Chain ID of the destination chain
-              type: string
-            state:
-              $ref: '#/components/schemas/StargateTransferState'
-            txs:
-              $ref: '#/components/schemas/StargateTransferTxs'
-          type: object
+        from_chain_id:
+          description: Chain ID of the source chain
+          type: string
+        to_chain_id:
+          description: Chain ID of the destination chain
+          type: string
+        state:
+          $ref: '#/components/schemas/StargateTransferState'
+        txs:
+          $ref: '#/components/schemas/StargateTransferTxs'
       type: object
     StargateTransferWrapper:
       properties:
         stargate_transfer:
           $ref: '#/components/schemas/StargateTransfer'
       type: object
+    GoFastTransfer:
+      description: A transfer facilitated by GoFast
+      properties:
+        from_chain_id:
+          description: Canonical chain-id of the source chain of the bridge transaction
+          type: string
+        to_chain_id:
+          description: Canonical chain-id of the destination chain of the bridge transaction
+          type: string
+        bridge_id:
+          $ref: '#/components/schemas/BridgeType'
+        denom_in:
+          description: Denom of the input asset
+          type: string
+        denom_out:
+          description: Denom of the output asset
+          type: string
+        fee:
+          $ref: '#/components/schemas/GoFastFee'
+
+      type: object
     GoFastTransferState:
       description: |
         GoFast transfer state:
-        * `GO_FAST_UNKNOWN` - Unknown state
-        * `GO_FAST_ORDER_SUBMITTED` - Order submitted on source chain
-        * `GO_FAST_ORDER_FILLED` - Order filled on destination chain
-        * `GO_FAST_ORDER_REFUNDED` - Order refunded
-        * `GO_FAST_ORDER_TIMED_OUT` - Order timed out
+        * `GO_FAST_TRANSFER_UNKNOWN` - Unknown state
+        * `GO_FAST_TRANSFER_SENT` - Order submitted on source chain
         * `GO_FAST_POST_ACTION_FAILED` - Order filled, but subsequent action (e.g., swap) failed
-        * `GO_FAST_COMPLETED_SUCCESS` - Order completed successfully
+        * `GO_FAST_TRANSFER_TIMEOUT` - Order timed out
+        * `GO_FAST_TRANSFER_FILLED` - Order filled on destination chain
+        * `GO_FAST_TRANSFER_REFUNDED` - Order refunded
       enum:
-        - GO_FAST_UNKNOWN
-        - GO_FAST_ORDER_SUBMITTED
-        - GO_FAST_ORDER_FILLED
-        - GO_FAST_ORDER_REFUNDED
-        - GO_FAST_ORDER_TIMED_OUT
+        - GO_FAST_TRANSFER_UNKNOWN
+        - GO_FAST_TRANSFER_SENT
         - GO_FAST_POST_ACTION_FAILED
-        - GO_FAST_COMPLETED_SUCCESS
+        - GO_FAST_TRANSFER_TIMEOUT
+        - GO_FAST_TRANSFER_FILLED
+        - GO_FAST_TRANSFER_REFUNDED
       type: string
     GoFastTransferTxs:
       properties:
@@ -2656,23 +2705,24 @@ components:
       type: object
     GoFastTransferInfo:
       properties:
-        go_fast_transfer:
-          properties:
-            from_chain_id:
-              description: Chain ID of the source chain
-              type: string
-            to_chain_id:
-              description: Chain ID of the destination chain
-              type: string
-            state:
-              $ref: '#/components/schemas/GoFastTransferState'
-            txs:
-              $ref: '#/components/schemas/GoFastTransferTxs'
-            error_message:
-              description: Error message if the transfer failed post-fill
-              type: string
-              nullable: true
-          type: object
+        from_chain_id:
+          description: Chain Id of the source chain
+          type: string
+          required: true
+        to_chain_id:
+          description: Chain Id of the destination chain
+          type: string
+          required: true
+        state:
+          $ref: '#/components/schemas/GoFastTransferState'
+          required: true
+        txs:
+          $ref: '#/components/schemas/GoFastTransferTxs'
+          required: true
+        error_message:
+          description: Error message if the transfer failed post-fill
+          type: string
+          nullable: true
       type: object
     BalanceRequestChainEntry:
       properties:
@@ -3038,6 +3088,24 @@ components:
               type: string
           type: object
       type: object
+    GoFastFee:
+      description: Go fast Fee
+      type: object
+      properties:
+        fee_asset:
+          $ref: '#/components/schemas/Asset'
+        bpsFee:
+          type: string
+        bpsFeeAmount:
+          type: string
+        sourceChainFeeAmount:
+          type: string
+        sourceChainFeeUsd:
+          type: string
+        destinationChainFeeAmount:
+          type: string
+        destinationChainFeeUsd:
+          type: string
     GRPCStatusCode:
       description: grpc status codes as defined [here](https://grpc.github.io/grpc/core/md_doc_statuscodes.html)
       type: number
@@ -3075,19 +3143,20 @@ components:
       type: object
     HyperlaneTransferInfo:
       properties:
-        hyperlane_transfer:
-          properties:
-            from_chain_id:
-              description: Chain ID of the source chain
-              type: string
-            to_chain_id:
-              description: Chain ID of the destination chain
-              type: string
-            state:
-              $ref: '#/components/schemas/HyperlaneTransferState'
-            txs:
-              $ref: '#/components/schemas/HyperlaneTransferTransactions'
-          type: object
+        from_chain_id:
+          description: Chain ID of the source chain
+          type: string
+          required: true
+        to_chain_id:
+          description: Chain ID of the destination chain
+          type: string
+          required: true
+        state:
+          $ref: '#/components/schemas/HyperlaneTransferState'
+          required: true
+        txs:
+          $ref: '#/components/schemas/HyperlaneTransferTransactions'
+          required: true
       type: object
     HyperlaneTransferState:
       description: |
@@ -3120,8 +3189,20 @@ components:
       type: object
     IBCTransferInfo:
       properties:
-        ibc_transfer:
-          $ref: '#/components/schemas/TransferInfo'
+        to_chain_id:
+          description: Chain ID of the destination chain
+          type: string
+          required: true
+        packet_txs:
+          $ref: '#/components/schemas/Packet'
+          required: true
+        from_chain_id:
+          description: Chain ID of the source chain
+          type: string
+          required: true
+        state:
+          $ref: '#/components/schemas/TransferState'
+          required: true
       type: object
     Msg:
       oneOf:
@@ -3631,19 +3712,20 @@ components:
       type: object
     OPInitTransferInfo:
       properties:
-        opinit_transfer:
-          properties:
-            to_chain_id:
-              description: Chain ID of the destination chain
-              type: string
-            from_chain_id:
-              description: Chain ID of the source chain
-              type: string
-            state:
-              $ref: '#/components/schemas/OPInitTransferState'
-            txs:
-              $ref: '#/components/schemas/OPInitTransferTxs'
-          type: object
+        to_chain_id:
+          description: Chain ID of the destination chain
+          type: string
+          required: true
+        from_chain_id:
+          description: Chain ID of the source chain
+          type: string
+          required: true
+        state:
+          $ref: '#/components/schemas/OPInitTransferState'
+          required: true
+        txs:
+          $ref: '#/components/schemas/OPInitTransferTxs'
+          required: true
       type: object
     OPInitTransferTxs:
       properties:
@@ -3663,9 +3745,9 @@ components:
         * `OPINIT_TRANSFER_SENT` - The deposit transaction on the source chain has executed
         * `OPINIT_TRANSFER_RECEIVED` - OPInit transfer has been received at the destination chain
       enum:
-        - CCTP_TRANSFER_UNKNOWN
-        - CCTP_TRANSFER_SENT
-        - CCTP_TRANSFER_RECEIVED
+        - OPINIT_TRANSFER_UNKNOWN
+        - OPINIT_TRANSFER_SENT
+        - OPINIT_TRANSFER_RECEIVED
       type: string
     Transfer:
       description: A cross-chain transfer
@@ -3718,28 +3800,24 @@ components:
           description: Indicates whether this transfer is relayed via Smart Relay
       type: object
     TransferEvent:
-      oneOf:
-        - $ref: '#/components/schemas/IBCTransferInfo'
-        - $ref: '#/components/schemas/AxelarTransferInfo'
-        - $ref: '#/components/schemas/CCTPTransferInfo'
-        - $ref: '#/components/schemas/HyperlaneTransferInfo'
-        - $ref: '#/components/schemas/OPInitTransferInfo'
-        - $ref: '#/components/schemas/EurekaTransferInfo'
-        - $ref: '#/components/schemas/StargateTransferInfo'
-        - $ref: '#/components/schemas/GoFastTransferInfo'
-    TransferInfo:
-      properties:
-        to_chain_id:
-          description: Chain ID of the destination chain
-          type: string
-        packet_txs:
-          $ref: '#/components/schemas/Packet'
-        from_chain_id:
-          description: Chain ID of the source chain
-          type: string
-        state:
-          $ref: '#/components/schemas/TransferState'
       type: object
+      properties:
+        ibcTransfer:
+          $ref: '#/components/schemas/IBCTransferInfo'
+        axelarTransfer:
+          $ref: '#/components/schemas/AxelarTransferInfo'
+        cctpTransfer:
+          $ref: '#/components/schemas/CCTPTransferInfo'
+        hyperlaneTransfer:
+          $ref: '#/components/schemas/HyperlaneTransferInfo'
+        opInitTransfer:
+          $ref: '#/components/schemas/OPInitTransferInfo'
+        eurekaTransfer:
+          $ref: '#/components/schemas/EurekaTransferInfo'
+        stargateTransfer:
+          $ref: '#/components/schemas/StargateTransferInfo'
+        goFastTransfer:
+          $ref: '#/components/schemas/GoFastTransferInfo'
     TransferState:
       description: |
         Transfer state:
@@ -3860,19 +3938,21 @@ components:
       type: object
     EurekaTransferInfo:
       properties:
-        eureka_transfer:
-          properties:
-            from_chain_id:
-              description: Chain ID of the source chain
-              type: string
-            to_chain_id:
-              description: Chain ID of the destination chain
-              type: string
-            state:
-              $ref: '#/components/schemas/TransferState'
-            packet_txs:
-              $ref: '#/components/schemas/Packet'
-          type: object
+        from_chain_id:
+          description: Chain ID of the source chain
+          type: string
+          required: true
+        to_chain_id:
+          description: Chain ID of the destination chain
+          type: string
+          required: true
+        state:
+          $ref: '#/components/schemas/TransferState'
+          required: true
+        packet_txs:
+          $ref: '#/components/schemas/Packet'
+          required: true
+      type: object
     EurekaTransferWrapper:
       properties:
         eureka_transfer:
